css overflow fix

--- a/css/board.css
+++ b/css/board.css
@@ -5,10 +5,12 @@ body {
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 body {
     font-family: 'Inter', sans-serif;
+    
 }
 
 header,
@@ -156,6 +158,8 @@ h2 {
     text-align: left;
     color: #42526E;
     margin-top: 30px;
+    margin-right: 30px;
+    margin-left: 30px;
 }
 
 .tasksHeader {
